My Europeana removed everywhere it was found

--- a/portal/src/main/message_keys/messages_az.properties
+++ b/portal/src/main/message_keys/messages_az.properties
@@ -19,12 +19,12 @@
 # permissions and limitations under the Licence.
 #
 
-MyCodeOfConduct_t=I understand that My Europeana gives me the opportunity to create tags for any item I wish. I agree that I\
+MyCodeOfConduct_t=I understand that the Delving portal gives me the opportunity to create tags for any item I wish. I agree that I\
             will not create any tags that could be considered libelous, harmful, threatening, unlawful, defamatory,\
             infringing, abusive, inflammatory, harassing, pornographic, obscene, fraudulent, invasive of privacy or\
             publicity rights, hateful, or racially, ethnically or otherwise objectionable. By clicking this box I agree\
-            to abide by this agreement, and understand that if I don't my membership of My Europeana will be terminated.
-MyCodeOfConductRequired_t=You must agree to our code of conduct to register for My Europeana
+            to abide by this agreement, and understand that if I don't my login on the portal will be terminated.
+MyCodeOfConductRequired_t=You must agree to our code of conduct to register for portal membership
 IAgree_t=I agree
 Contributor_t=Contributor
 Contributors_t=Contributors
@@ -42,11 +42,11 @@ SavedSearches_t=Saved searches
 SavedTags_t=Saved tags
 LogIn_t=Login
 LogOut_t=Log out
-MyEuropeana_t=My Europeana
+PersonalPage=My Personal Page
 FeedbackResponse_t=Thank you very much for your feedback. If your feedback requires a response a member of the Europeana team will get back to you as soon as possible. For faster response feedback should be submitted in English.
 EnewsOptin_t=Keep me in touch with new developments to Europeana
 UserConduct_t=User Conduct
-UserConductAgree_t=I understand that My Europeana gives me the opportunity to create tags for any item I wish. I agree that I will not create any tags that could be considered libelous, harmful, threatening, unlawful, defamatory, infringing, abusive, inflammatory, harassing, pornographic, obscene, fraudulent, invasive of privacy or publicity rights, hateful, or racially, ethnically or otherwise objectionable. By clicking this box I agree to abide by this agreement, and understand that if I don't my membership of My Europeana will be terminated. CLICK TO AGREE
+UserConductAgree_t=I understand that the Delving portal gives me the opportunity to create tags for any item I wish. I agree that I will not create any tags that could be considered libelous, harmful, threatening, unlawful, defamatory, infringing, abusive, inflammatory, harassing, pornographic, obscene, fraudulent, invasive of privacy or publicity rights, hateful, or racially, ethnically or otherwise objectionable. By clicking this box I agree to abide by this agreement, and understand that if I don't my login on the portal will be terminated. CLICK TO AGREE
 FirstName_t=First name
 lastName_t=Last name
 NoScript_t=To make optimal use of this website you need to have JavaScript activated
@@ -134,7 +134,7 @@ EmailAddress_t=Email address
 EmailSent_t=Email sent
 EmailSendFailed_t=Email could not be sent
 Send_t=Send
-SaveToMyEuropeana_t=Save to My Europeana
+SaveToPersonalPage=Save to My Personal Page
 ItemSaved_t=Item saved
 ItemSaveFailed_t=Save item failed
 Error_t=Error
@@ -162,7 +162,7 @@ NoSavedSearches_t=No saved searches
 NoSavedTags_t=No saved tags
 DateSaved_t=Date saved
 Remove_t=Remove
-EmailWelcome_t=Welcome to MyEuropeana
+EmailWelcome_t=Welcome to My Personal Page
 EmailClickToConfirm_t=Please click on the following link to confirm your registration
 EmailEuropeanaTeam_t=The Europeana Team
 Results_t=Results
