--- a/portal/src/main/message_keys/messages_bg.properties
+++ b/portal/src/main/message_keys/messages_bg.properties
@@ -19,13 +19,13 @@
 # permissions and limitations under the Licence.
 #
 
-MyCodeOfConduct_t=Разбирам, че My Europeana ми позволява да създавам тагове за всеки обект, за който пожелая. Съгласен съм да\
+MyCodeOfConduct_t=Разбирам, че My Personal Page ми позволява да създавам тагове за всеки обект, за който пожелая. Съгласен съм да\
             не създавам тагове, които могат да се възприемат като обидни, заплашителни, незаконни, унизителни,\
             зловредни, с елементи на насилие, подбудителни, враждебни, порнографски, отблъскващи, измамнически,\
             нарушаващи личните или обществените права, изпълнени с омраза или такива, които предизвикват възражение на\
             расова, етническа или друга основа. Като щраквам върху тази кутийка се съгласявам да спазвам това\
-            споразумение и разбирам, че ако не го спазвам, моето членство в My Europeana ще бъде прекратено.
-MyCodeOfConductRequired_t=Трябва да се съгласите с нашите правила, за да се регистрирате в My Europeana.
+            споразумение и разбирам, че ако не го спазвам, моето членство в My Personal Page ще бъде прекратено.
+MyCodeOfConductRequired_t=Трябва да се съгласите с нашите правила, за да се регистрирате в My Personal Page.
 IAgree_t=Съгласен съм
 Contributor_t=Доставчик
 Contributors_t=Доставчици
@@ -43,11 +43,11 @@ SavedSearches_t=Запазени търсения
 SavedTags_t=Запазени тагове
 LogIn_t=Влизане
 LogOut_t=Излизане
-MyEuropeana_t=My Europeana
+PersonalPage=My Personal Page
 FeedbackResponse_t=Благодарим ви за обратната връзка. Ако тя изисква отговор, ще го получите възможно най-скоро от специалист от екипа на Europeana. Ако използвате английски език, ще получите отговор по-бързо.
 EnewsOptin_t=Информирайте ме за развитието на Europeana.
 UserConduct_t=Ръководство за потребителя
-UserConductAgree_t=Разбирам, че My Europeana ми дава възможност да създавам тагове за всеки обект, за който пожелая. Съгласен съм да не създавам тагове, които могат да се възприемат като обидни, заплашителни, незаконни, унизителни, зловредни, с елементи на насилие, подбудителни, враждебни, порнографски, отблъскващи, измамнически, нарушаващи личните или обществените права, изпълнени с омраза или такива, които предизвикват възражение на расова, етническа или друга основа. Като щраквам върху тази кутийка се съгласявам да спазвам това споразумение и разбирам, че ако не го спазвам, моето членство в My Europeana ще бъде прекратено. ЩРАКНИ ЗА СЪГЛАСИЕ
+UserConductAgree_t=Разбирам, че My Personal Page ми дава възможност да създавам тагове за всеки обект, за който пожелая. Съгласен съм да не създавам тагове, които могат да се възприемат като обидни, заплашителни, незаконни, унизителни, зловредни, с елементи на насилие, подбудителни, враждебни, порнографски, отблъскващи, измамнически, нарушаващи личните или обществените права, изпълнени с омраза или такива, които предизвикват възражение на расова, етническа или друга основа. Като щраквам върху тази кутийка се съгласявам да спазвам това споразумение и разбирам, че ако не го спазвам, моето членство в My Personal Page ще бъде прекратено. ЩРАКНИ ЗА СЪГЛАСИЕ
 FirstName_t=Лично име
 lastName_t=Фамилия
 NoScript_t=За да използвате този уебсайт по оптимален начин, трябва да e активиран JavaScript
@@ -134,7 +134,7 @@ EmailAddress_t=Е-mail адрес
 EmailSent_t=Е-mail-ът е изпратен
 EmailSendFailed_t=Е-mail-ът не може да бъде изпратен
 Send_t=Изпрати
-SaveToMyEuropeana_t=Запази в My Europeana
+SaveToPersonalPage=Запази в My Personal Page
 ItemSaved_t=Обектът е запазен
 ItemSaveFailed_t=Обектът не можа да бъде запазен
 Error_t=Грешка
@@ -162,7 +162,7 @@ NoSavedSearches_t=Няма запазени търсения
 NoSavedTags_t=Няма запазени тагове
 DateSaved_t=Датата е запазена
 Remove_t=Изтрий
-EmailWelcome_t=Добре дошли в MyEuropeana
+EmailWelcome_t=Добре дошли в My Personal Page
 EmailClickToConfirm_t=Моля щракнете върху връзката, за да потвърдите регистрацията си
 EmailEuropeanaTeam_t=Екипът на Europeana
 Results_t=Резултати
