--- a/portal/src/main/message_keys/messages_ca.properties
+++ b/portal/src/main/message_keys/messages_ca.properties
@@ -43,7 +43,7 @@ SavedSearches_t=Cerques guardades
 SavedTags_t=Etiquetes guardades
 LogIn_t=Connexió
 LogOut_t=Desconnexió
-MyEuropeana_t=La Meva Europeana
+PersonalPage=La Meva Europeana
 FeedbackResponse_t=Moltes gràcies pels vostres comentaris. Si aquests requereixen una resposta, un membre de l'equip d'Europeana us contactarà el més aviat possible. Per rebre més ràpidament una resposta escriviu, si us plau, els vostres comentaris en anglès.
 EnewsOptin_t=Informeu-me dels nous desenvolupaments d'Europeana
 UserConduct_t=Conducta de l'usuari
@@ -135,7 +135,7 @@ EmailAddress_t=Adreça de correu electrònic
 EmailSent_t=Correu electrònic enviat
 EmailSendFailed_t=No s'ha pogut enviar el correu electrònic
 Send_t=Enviar
-SaveToMyEuropeana_t=Guardar a la Meva Europeana
+SaveToPersonalPage=Guardar a la Meva Europeana
 ItemSaved_t=Ítem guardat
 ItemSaveFailed_t=Guardar ítem ha fallat
 Error_t=Error
