--- a/portal/src/main/message_keys/messages_cs.properties
+++ b/portal/src/main/message_keys/messages_cs.properties
@@ -19,12 +19,12 @@
 # permissions and limitations under the Licence.
 #
 
-MyCodeOfConduct_t=I understand that My Europeana gives me the opportunity to create tags for any item I wish. I agree that I\
+MyCodeOfConduct_t=I understand that the Delving portal gives me the opportunity to create tags for any item I wish. I agree that I\
             will not create any tags that could be considered libelous, harmful, threatening, unlawful, defamatory,\
             infringing, abusive, inflammatory, harassing, pornographic, obscene, fraudulent, invasive of privacy or\
             publicity rights, hateful, or racially, ethnically or otherwise objectionable. By clicking this box I agree\
-            to abide by this agreement, and understand that if I don't my membership of My Europeana will be terminated.
-MyCodeOfConductRequired_t=You must agree to our code of conduct to register for My Europeana
+            to abide by this agreement, and understand that if I don't my login on the portal will be terminated.
+MyCodeOfConductRequired_t=You must agree to our code of conduct to register for portal membership
 IAgree_t=Souhlasím
 Contributor_t=Přispěvatel
 Contributors_t=Přispěvatelé
@@ -42,7 +42,7 @@ SavedSearches_t=Uložená vyhledávání
 SavedTags_t=Uložená pole
 LogIn_t=Přihlaš se
 LogOut_t=Odhlaš se
-MyEuropeana_t=Moje Europeana
+PersonalPage=Moje Europeana
 FeedbackResponse_t=Děkujeme za váš ohlas. Jestliže jde o otázku, kterou může zodpovědět člen týmu European, obrátí se na vás co nejdříve. Aby odpověď byla rychlejší, posílejte sdělení anglicky, prosím.
 EnewsOptin_t=Informujte mě o novinkách týkajících se Euroepan
 UserConduct_t=Podmínky použití
@@ -133,7 +133,7 @@ EmailAddress_t=E-mail
 EmailSent_t=E-mail byl odeslán
 EmailSendFailed_t=E-mail nemohl být odeslán
 Send_t=Pošli
-SaveToMyEuropeana_t=Ulož do Mých European
+SaveToPersonalPage=Ulož do Mých European
 ItemSaved_t=Položka byla uložena
 ItemSaveFailed_t=Chyba při ukládání položky
 Error_t=Chyba
