--- a/portal/src/main/message_keys/messages_da.properties
+++ b/portal/src/main/message_keys/messages_da.properties
@@ -19,7 +19,7 @@
 # permissions and limitations under the Licence.
 #
 
-MyCodeOfConduct_t=Jeg har forstået at My Europeana giver mig mulighed for at tilføje tags (mine egne beskrivelser)til de\
+MyCodeOfConduct_t=Jeg har forstået at My Personal Page giver mig mulighed for at tilføje tags (mine egne beskrivelser)til de\
             værker jeg ønsker. Jeg er indforstået med at jeg ikke vil benytte tags, som kan betragtes som injurierende\
             eller ærekrænkende, skadelige, truende, ulovlige, som krænkende ophavsrettigheder, fornærmende,\
             provokerende, chikanerende, pornografiske, sjofle, svigagtige,krænkende private eller offentlige\
@@ -44,7 +44,7 @@ SavedSearches_t=Gemte søgninger
 SavedTags_t=Gemte nøgleord
 LogIn_t=Login
 LogOut_t=Logout
-MyEuropeana_t=Mit Europeana
+PersonalPage=Mit Europeana
 FeedbackResponse_t=Tak for din feedback. Hvis den kræver en respons vil et medlem af Europeana-teamet vende til bage til dig så snart som muligt. For den hurtigste respons skal din feedback formuleres på engelsk
 EnewsOptin_t=Hold mig orienteret om nye tiltag i Europeana
 UserConduct_t=Brugeradfærd
@@ -135,7 +135,7 @@ EmailAddress_t=E-mail-adresse
 EmailSent_t=E-mail afsendt
 EmailSendFailed_t=E-mail kunne ikke sendes
 Send_t=Send
-SaveToMyEuropeana_t=Gem i Mit Europeana
+SaveToPersonalPage=Gem i Mit Europeana
 ItemSaved_t=Reference gemt
 ItemSaveFailed_t=Gem reference mislykkedes
 Error_t=Fejl
