--- a/portal/src/main/message_keys/messages_de.properties
+++ b/portal/src/main/message_keys/messages_de.properties
@@ -19,8 +19,8 @@
 # permissions and limitations under the Licence.
 #
 
-MyCodeOfConduct_t=Ich habe verstanden, dass ich in My Europeana die Möglichkeit habe, Tags für jedes Objekt zu erstellen. Ich verpflichte mich, dass ich keine Tags erstelle, die verleumderisch, schädlich, drohend, rechtswidrig, diffamierend, regelwidrig, missbräuchlich, aufrührerisch, belästigend, pornografisch, obszön oder betrügerisch sind, die in die Privatsphäre eingreifen oder die Öffentlichkeit angreifen, Hass, Rassismus oder sonstige ethnisch begründete Ablehnungen darstellen. Durch Anklicken stimme ich zu, mich an diese Regelungen zu halten und weiß, dass bei Verstoß meine Teilnahme an My Europeana beendet wird.
-MyCodeOfConductRequired_t=Sie müssen unseren Verhaltensregeln zustimmen, um sich für My Europeana registrieren zu können.
+MyCodeOfConduct_t=Ich habe verstanden, dass ich in My Personal Page die Möglichkeit habe, Tags für jedes Objekt zu erstellen. Ich verpflichte mich, dass ich keine Tags erstelle, die verleumderisch, schädlich, drohend, rechtswidrig, diffamierend, regelwidrig, missbräuchlich, aufrührerisch, belästigend, pornografisch, obszön oder betrügerisch sind, die in die Privatsphäre eingreifen oder die Öffentlichkeit angreifen, Hass, Rassismus oder sonstige ethnisch begründete Ablehnungen darstellen. Durch Anklicken stimme ich zu, mich an diese Regelungen zu halten und weiß, dass bei Verstoß meine Teilnahme an My Personal Page beendet wird.
+MyCodeOfConductRequired_t=Sie müssen unseren Verhaltensregeln zustimmen, um sich für My Personal Page registrieren zu können.
 IAgree_t=Ich stimme zu
 Contributor_t=Beiträger
 Contributors_t=Beiträger
@@ -38,11 +38,11 @@ SavedSearches_t=Gespeicherte Suchanfragen
 SavedTags_t=Gespeicherte Tags
 LogIn_t=Einloggen
 LogOut_t=Ausloggen
-MyEuropeana_t=My Europeana
+PersonalPage=My Personal Page
 FeedbackResponse_t=Vielen Dank für Ihr Feedback. Falls Ihr feedback eine Antwort erfordert, wird sich ein Mitglied des Europeana-Teams so bald wie möglich mit Ihnen in Verbindung setzen. Sie erhalten schneller eine Antwort, wenn Sie Ihr Feedback in englischer Sprache verfassen.
 EnewsOptin_t=Bitte halten Sie mich über Neuigkeiten der Europeana auf dem Laufenden.
 UserConduct_t=Nutzerverhalten
-UserConductAgree_t=Ich habe verstanden, dass ich in My Europeana die Möglichkeit habe, Tags für jedes Objekt zu erstellen. Ich verpflichte mich, dass ich keine Tags erstelle, die verleumderisch, schädlich, drohend, rechtswidrig, diffamierend, regelwidrig, missbräuchlich, aufrührerisch, belästigend, pornografisch, obszön oder betrügerisch sind, die in die Privatsphäre eingreifen oder die Öffentlichkeit angreifen, Hass, Rassismus oder sonstige ethnisch begründete Ablehnungen darstellen. Durch Anklicken stimme ich zu, mich an diese Regelungen zu halten und weiß, dass bei Verstoß meine Teilnahme an My Europeana beendet wird. HIER KLICKEN UM ZUZUSTIMMEN
+UserConductAgree_t=Ich habe verstanden, dass ich in My Personal Page die Möglichkeit habe, Tags für jedes Objekt zu erstellen. Ich verpflichte mich, dass ich keine Tags erstelle, die verleumderisch, schädlich, drohend, rechtswidrig, diffamierend, regelwidrig, missbräuchlich, aufrührerisch, belästigend, pornografisch, obszön oder betrügerisch sind, die in die Privatsphäre eingreifen oder die Öffentlichkeit angreifen, Hass, Rassismus oder sonstige ethnisch begründete Ablehnungen darstellen. Durch Anklicken stimme ich zu, mich an diese Regelungen zu halten und weiß, dass bei Verstoß meine Teilnahme an My Personal Page beendet wird. HIER KLICKEN UM ZUZUSTIMMEN
 FirstName_t=Vorname
 lastName_t=Nachname
 NoScript_t=Um diese Seite optimal nutzen zu können, müssen Sie Javascript aktiviert haben
@@ -130,7 +130,7 @@ EmailAddress_t=E-Mailadresse
 EmailSent_t=E-Mail gesendet
 EmailSendFailed_t=E-Mail konnte nicht gesendet werden
 Send_t=Senden
-SaveToMyEuropeana_t=In My Europeana speichern
+SaveToPersonalPage=In My Personal Page speichern
 ItemSaved_t=Objekt gespeichert
 ItemSaveFailed_t=Objekt speichern fehlgeschlagen
 Error_t=Fehler
@@ -158,7 +158,7 @@ NoSavedSearches_t=Keine gespeicherten Suchanfragen
 NoSavedTags_t=Keine gespeicherten Tags
 DateSaved_t=Datum gespeichert
 Remove_t=Entfernen
-EmailWelcome_t=Willkommen zu MyEuropeana
+EmailWelcome_t=Willkommen zu My Personal Page
 EmailClickToConfirm_t=Bitte klicken Sie auf den folgenden Link, um Ihre Registrierung zu bestätigen
 EmailEuropeanaTeam_t=Das Europeana-Team
 Results_t=Ergebnisse
