--- a/portal/src/main/message_keys/messages_es.properties
+++ b/portal/src/main/message_keys/messages_es.properties
@@ -43,7 +43,7 @@ SavedSearches_t=Búsquedas guardadas
 SavedTags_t=Etiquetas guardadas
 LogIn_t=Conexión
 LogOut_t=Desconexión
-MyEuropeana_t=Mi Europeana
+PersonalPage=Mi Europeana
 FeedbackResponse_t=Muchas gracias por su comunicación con nosotros. Un miembro de Europeana se pondrá en contacto con usted tan pronto como podamos, si alguna de sus aportaciones necesita respuesta. Para agilizar el tiempo de respuesta, las aportaciones deben estar escritas en inglés.
 EnewsOptin_t=Manténganme informado/a de todas las novedades de Europeana.
 UserConduct_t=Conducta de los/as usuarios/as
@@ -134,7 +134,7 @@ EmailAddress_t=Dirección de correo electrónico
 EmailSent_t=Correo enviado
 EmailSendFailed_t=El correo no pudo ser enviado
 Send_t=Enviado
-SaveToMyEuropeana_t=Guardar en Mi Europeana
+SaveToPersonalPage=Guardar en Mi Europeana
 ItemSaved_t=Ejemplar guardado
 ItemSaveFailed_t=Fallo al guardar ejemplar
 Error_t=Error
