--- a/portal/src/main/message_keys/messages_et.properties
+++ b/portal/src/main/message_keys/messages_et.properties
@@ -42,7 +42,7 @@ SavedSearches_t=Salvestatud päringud
 SavedTags_t=Salvestatud märksõnad
 LogIn_t=Logi sisse
 LogOut_t=Logi välja
-MyEuropeana_t=Minu Europeana
+PersonalPage=Minu Europeana
 FeedbackResponse_t=Täname väga tagasiside eest Kui Teie tagasiside eeldab vastust, siis võtab keegi Europeana meeskonna liikmetest Teiega esimesel võimalusel ühendust. Kiirema vastuse kindlustab inglise keeles jäetud kommentaarid.
 EnewsOptin_t=Palun mind teavitada Europeana edasiarendustest
 UserConduct_t=Sisekorra eeskiri
@@ -133,7 +133,7 @@ EmailAddress_t=E-posti aadress
 EmailSent_t=E-kiri saadetud
 EmailSendFailed_t=E-kirja saatmine ebaõnnestus
 Send_t=Saada
-SaveToMyEuropeana_t=Salvesta Minu Europeanasse
+SaveToPersonalPage=Salvesta Minu Europeanasse
 ItemSaved_t=Objekt salvestatud
 ItemSaveFailed_t=Objekti salvestamine ebaõnnestus
 Error_t=Viga
