--- a/portal/src/main/message_keys/messages_fi.properties
+++ b/portal/src/main/message_keys/messages_fi.properties
@@ -43,7 +43,7 @@ SavedSearches_t=Tallennetut haut
 SavedTags_t=Tallennetut tagit
 LogIn_t=Kirjaudu sisään
 LogOut_t=Kirjaudu ulos
-MyEuropeana_t=Minun Europeanani
+PersonalPage=Minun Europeanani
 FeedbackResponse_t=Kiitokset palautteestasi. Jos palautteesi edellyttää vastausta, Europeana-tiimin jäsen ottaa sinuun yhteyttä mahdollisimman pian. Saadaksesi vastauksen nopeammin jätä palautteesi englanniksi.
 EnewsOptin_t=Pidä minut ajan tasalla Europeanan kehityksestä
 UserConduct_t=Käyttäjämenettely
@@ -134,7 +134,7 @@ EmailAddress_t=Sähköpostiosoite
 EmailSent_t=Sähköposti on lähetetty
 EmailSendFailed_t=Sähköpostin lähettäminen epäonnistui
 Send_t=Lähetä
-SaveToMyEuropeana_t=Tallenna minun Europeanaani
+SaveToPersonalPage=Tallenna minun Europeanaani
 ItemSaved_t=Kohde tallennettu
 ItemSaveFailed_t=Kohteen tallentaminen epäonnistui
 Error_t=Virhe
