--- a/portal/src/main/message_keys/messages_fr.properties
+++ b/portal/src/main/message_keys/messages_fr.properties
@@ -45,7 +45,7 @@ SavedSearches_t=Recherches sauvegardées
 SavedTags_t=Etiquettes sauvegardées
 LogIn_t=Se connecter
 LogOut_t=Se déconnecter
-MyEuropeana_t=Mon Europeana
+PersonalPage=Mon Europeana
 FeedbackResponse_t=Recevez nos remerciements pour votre remarque. Si votre remarque nécessite une réponse un membre de l'équipe d'Europeana vous contactera dès que possible. Pour une réponse plus rapide, veuillez soumettre votre remarque en anglais.
 EnewsOptin_t=Rester en contact avec les nouveaux développements d'Europeana
 UserConduct_t=Code d'utilisation
@@ -136,7 +136,7 @@ EmailAddress_t=Adresse mél.
 EmailSent_t=Mél. envoyé
 EmailSendFailed_t=le mél. n'a pas pu être envoyé
 Send_t=Envoyer
-SaveToMyEuropeana_t=Sauver Mon Europeana
+SaveToPersonalPage=Sauver Mon Europeana
 ItemSaved_t=Objet sauvegardé
 ItemSaveFailed_t=Sauvegarde échouée
 Error_t=Erreur
