--- a/portal/src/main/message_keys/messages_ga.properties
+++ b/portal/src/main/message_keys/messages_ga.properties
@@ -19,13 +19,13 @@
 # permissions and limitations under the Licence.
 #
 
-MyCodeOfConduct_t=Tuigim go dtugann My Europeana an deis dom clibeanna a chruthú do mhír ar bith is mian liom. Aontaím nach\
+MyCodeOfConduct_t=Tuigim go dtugann My Personal Page an deis dom clibeanna a chruthú do mhír ar bith is mian liom. Aontaím nach\
             gcruthóidh mé aon chlibeanna a d'fhéadfadh a bheith aithiseach, díobhálach, bagrach, mídhleathach,\
             clúmhillteach, sáraitheach, díblithe, gríosaitheach, ciapthach, pornagrafach, gáirsiúil, calaoiseach, ina\
             shárú príobháide nó cearta poiblíochta, gráiniúil, nó inlochtaithe ar bhonn ciníoch, eitneach nó ar aon\
             bhonn eile. Trí chliceáil ar an mbosca seo aontaím go gcloífidh mé leis an gcomhaontú seo agus sa chás nach\
-            gcloífidh tuigim go gcuirfear deireadh le mo bhallraíocht ar My Europeana.
-MyCodeOfConductRequired_t=You must agree to our code of conduct to register for My Europeana
+            gcloífidh tuigim go gcuirfear deireadh le mo bhallraíocht ar My Personal Page.
+MyCodeOfConductRequired_t=You must agree to our code of conduct to register for portal membership
 IAgree_t=Aontaím
 Contributor_t=Rannpháirtí
 Contributors_t=Rannpháirtithe
@@ -43,11 +43,11 @@ SavedSearches_t=Cuardaigh shábháilte
 SavedTags_t=Clibeanna sábhailte
 LogIn_t=Logáil isteach
 LogOut_t=Logáil amach
-MyEuropeana_t=My Europeana
+PersonalPage=My Personal Page
 FeedbackResponse_t=Thank you very much for your feedback. If your feedback requires a response a member of the Europeana team will get back to you as soon as possible. For faster response feedback should be submitted in English.
 EnewsOptin_t=Keep me in touch with new developments to Europeana
 UserConduct_t=User Conduct
-UserConductAgree_t=I understand that My Europeana gives me the opportunity to create tags for any item I wish. I agree that I will not create any tags that could be considered libelous, harmful, threatening, unlawful, defamatory, infringing, abusive, inflammatory, harassing, pornographic, obscene, fraudulent, invasive of privacy or publicity rights, hateful, or racially, ethnically or otherwise objectionable. By clicking this box I agree to abide by this agreement, and understand that if I don't my membership of My Europeana will be terminated. CLICK TO AGREE
+UserConductAgree_t=I understand that the Delving portal gives me the opportunity to create tags for any item I wish. I agree that I will not create any tags that could be considered libelous, harmful, threatening, unlawful, defamatory, infringing, abusive, inflammatory, harassing, pornographic, obscene, fraudulent, invasive of privacy or publicity rights, hateful, or racially, ethnically or otherwise objectionable. By clicking this box I agree to abide by this agreement, and understand that if I don't my login on the portal will be terminated. CLICK TO AGREE
 FirstName_t=First name
 lastName_t=Last name
 NoScript_t=To make optimal use of this website you need to have JavaScript activated
@@ -134,7 +134,7 @@ EmailAddress_t=Seoladh r-phoist
 EmailSent_t=R-phost seolta
 EmailSendFailed_t=Níor seoladh an R-phost
 Send_t=Seol
-SaveToMyEuropeana_t=Sábháil chuig My Europeana
+SaveToPersonalPage=Sábháil chuig My Personal Page
 ItemSaved_t=Mír sábháilte
 ItemSaveFailed_t=Mír sábhailte teipthe
 Error_t=Earráid
@@ -162,7 +162,7 @@ NoSavedSearches_t=Níl aon chuardaigh shábháilte
 NoSavedTags_t=Níl aon chlibeanna sábháilte
 DateSaved_t=Dáta sábháilte
 Remove_t=Bain
-EmailWelcome_t=Fáilte chuig MyEuropeana
+EmailWelcome_t=Fáilte chuig My Personal Page
 EmailClickToConfirm_t=Cliceáil ar an nasc seo leanas le do thoil chun do chláru a chinntiú
 EmailEuropeanaTeam_t=Foireann Europeana
 Results_t=Torthaí
