--- a/portal/src/main/message_keys/messages_hu.properties
+++ b/portal/src/main/message_keys/messages_hu.properties
@@ -20,7 +20,7 @@
 #
 
 MyCodeOfConduct_t=Tudom, hogy Az én Europeánám lehetővé teszi, hogy bármely digitális dokumentumhoz címkét hozzak létre. Megígérem, hogy nem hozok létre olyan címkét, amely sértő, károsító, fenyegető, törvénytelen, rágalmazó, gyalázkodó, zaklató, pornográf, obszcén, tisztességtelen, sérti a magán vagy közösségi jogokat, gyűlölködő, és faji, etnikai vagy egyéb okból elítélendő. A négyzetre történő kattintással elfogadom, hogy betartom ezt a megállapodást. Amennyiben ettől eltérek, Az én Europeanámban való tagságom megszűnik.
-MyCodeOfConductRequired_t=El kell fogadnia a My Europeana Felhasználói magatártásra vonatkozó szabályait
+MyCodeOfConductRequired_t=El kell fogadnia a My Personal Page Felhasználói magatártásra vonatkozó szabályait
 IAgree_t=Elfogadom
 Contributor_t=Közreműködő
 Contributors_t=Közreműködők
@@ -38,7 +38,7 @@ SavedSearches_t=Mentett keresések
 SavedTags_t=Mentett címkék
 LogIn_t=Bejelentkezés
 LogOut_t=Kijelentkezés
-MyEuropeana_t=Az én Europeanám
+PersonalPage=Az én Europeanám
 FeedbackResponse_t=Nagyon köszönjük a visszajelzést! Amennyiben a megjegyzése választ igényel, az Europeana csapata válaszolni fog, amilyen gyorsan csak tud. A gyorsabb válasz érdekében kérjük, hogy angolul írjon!
 EnewsOptin_t=Tájékoztatssanak az Europeana új fejlesztéseiről
 UserConduct_t=Felhasználói magatartás
@@ -129,7 +129,7 @@ EmailAddress_t=E-mail címek
 EmailSent_t=E-mail elküldve
 EmailSendFailed_t=Az e-mail küldése sikertelen.
 Send_t=Küldés
-SaveToMyEuropeana_t=Mentés Az én Europeanámba
+SaveToPersonalPage=Mentés Az én Europeanámba
 ItemSaved_t=Elem elmentve
 ItemSaveFailed_t=Az elem mentése sikertelen
 Error_t=Hiba
