--- a/portal/src/main/message_keys/messages_is.properties
+++ b/portal/src/main/message_keys/messages_is.properties
@@ -38,7 +38,7 @@ SavedSearches_t=Vistaðar leitir
 SavedTags_t=Vistaðar tilvísanir
 LogIn_t=Innskráning
 LogOut_t=Útskráning
-MyEuropeana_t=Mitt Europeana
+PersonalPage=Mitt Europeana
 FeedbackResponse_t=Þakka þér fyrir þín viðbrögð. Ef þau kalla á svar mun starfsmaður  Europeana hafa samband við þig  eins fljótt og auðið er. Til að  tryggja að svar berist skjótt er  best að senda viðbrögð þín á ensku.
 EnewsOptin_t=Leyfðu mér að fylgjast með  nýjungum í Europeana
 UserConduct_t=Hegðun Notanda
@@ -129,7 +129,7 @@ EmailAddress_t=Netfang
 EmailSent_t=Búið að senda tölvupóst
 EmailSendFailed_t=Ekki var hægt að senda tölvupóst
 Send_t=Senda
-SaveToMyEuropeana_t=Vista í Mínu Europeana
+SaveToPersonalPage=Vista í Mínu Europeana
 ItemSaved_t=Eintak vistað
 ItemSaveFailed_t=Vistun á eintaki mistókst
 Error_t=Villa
