--- a/portal/src/main/message_keys/messages_it.properties
+++ b/portal/src/main/message_keys/messages_it.properties
@@ -19,8 +19,8 @@
 # permissions and limitations under the Licence.
 #
 
-MyCodeOfConduct_t=Capisco che My Europeana mi offre l'opportunità di creare tag per qualsiasi elemento desideri. Mi impegno a non creare alcun tag che possa essere considerato calunnioso, dannoso, minaccioso, illecito, diffamatorio, illegale, abusivo, molesto, pornografico, osceno, fraudolento, invasivo della privacy, istigatore all’odio razziale o etnico o altrimenti deplorevole. Cliccando su questa casella mi impegno a rispettare questo accordo; accetto che, in caso contrario, la mia adesione a My Europeana verrà revocata.
-MyCodeOfConductRequired_t=Devi accettare il nostro codice di condotta per poterti registrare in My Europeana
+MyCodeOfConduct_t=Capisco che My Personal Page mi offre l'opportunità di creare tag per qualsiasi elemento desideri. Mi impegno a non creare alcun tag che possa essere considerato calunnioso, dannoso, minaccioso, illecito, diffamatorio, illegale, abusivo, molesto, pornografico, osceno, fraudolento, invasivo della privacy, istigatore all’odio razziale o etnico o altrimenti deplorevole. Cliccando su questa casella mi impegno a rispettare questo accordo; accetto che, in caso contrario, la mia adesione a My Personal Page verrà revocata.
+MyCodeOfConductRequired_t=Devi accettare il nostro codice di condotta per poterti registrare in My Personal Page
 IAgree_t=Accetto
 Contributor_t=Autore di contributo
 Contributors_t=Autori di contributi
@@ -38,11 +38,11 @@ SavedSearches_t=Ricerche salvate
 SavedTags_t=Tag salvati
 LogIn_t=Accedi
 LogOut_t=Esci
-MyEuropeana_t=MyEuropeana
+PersonalPage=My Personal Page
 FeedbackResponse_t=Molte grazie per il tuo feedback. Se questo richiede una risposta, un membro del team di Europeana provvederà a fornirtela al più presto. Per una risposta più rapida i commenti dovranno essere inviati in lingua inglese.
 EnewsOptin_t=Tienimi aggiornato sui nuovi sviluppi di Europeana
 UserConduct_t=User Conduct
-UserConductAgree_t=I understand that My Europeana gives me the opportunity to create tags for any item I wish. I agree that I will not create any tags that could be considered libelous, harmful, threatening, unlawful, defamatory, infringing, abusive, inflammatory, harassing, pornographic, obscene, fraudulent, invasive of privacy or publicity rights, hateful, or racially, ethnically or otherwise objectionable. By clicking this box I agree to abide by this agreement, and understand that if I don't my membership of My Europeana will be terminated. CLICK TO AGREE
+UserConductAgree_t=I understand that the Delving portal gives me the opportunity to create tags for any item I wish. I agree that I will not create any tags that could be considered libelous, harmful, threatening, unlawful, defamatory, infringing, abusive, inflammatory, harassing, pornographic, obscene, fraudulent, invasive of privacy or publicity rights, hateful, or racially, ethnically or otherwise objectionable. By clicking this box I agree to abide by this agreement, and understand that if I don't my login on the portal will be terminated. CLICK TO AGREE
 FirstName_t=Nome
 lastName_t=Cognome
 NoScript_t=Per un uso ottimale di questo sito è necessario aver attivato JavaScript
@@ -129,7 +129,7 @@ EmailAddress_t=Indirizzo e-mail
 EmailSent_t=E-mail inviata
 EmailSendFailed_t=La e-mail non ha potuto essere inviata
 Send_t=Invia
-SaveToMyEuropeana_t=Salva in MyEuropeana
+SaveToPersonalPage=Salva in My Personal Page
 ItemSaved_t=Oggetto salvato
 ItemSaveFailed_t=Oggetto non salvato
 Error_t=Errore
@@ -157,7 +157,7 @@ NoSavedSearches_t=Nessuna ricerca salvata
 NoSavedTags_t=Nessun tag salvato
 DateSaved_t=Dati salvati
 Remove_t=Rimuovi
-EmailWelcome_t=Benvenuti in MyEuropeana
+EmailWelcome_t=Benvenuti in My Personal Page
 EmailClickToConfirm_t=Cliccare sul link seguente per confermare la registrazione
 EmailEuropeanaTeam_t=Il team Europeana
 Results_t=Risultati
