--- a/portal/src/main/message_keys/messages_lt.properties
+++ b/portal/src/main/message_keys/messages_lt.properties
@@ -19,8 +19,8 @@
 # permissions and limitations under the Licence.
 #
 
-MyCodeOfConduct_t=Suprantu, kad My Europeana man suteikia galimybę susikurti žymes bet kuriam mano norimam objektui. Sutinku, kad nekursiu tokių žymių, kurios būtų šmeižikiškos, žalingos, grasinančios, neteisėtos,įžeidžiančios, pažeidžiančios įstatymus, užgaulios, kurstančios, pornografinės, nepadorios, apgaulingos, grobikiškos privačiųjų ar viešųjų teisių požiūriu,  skleidžiančios rasinę bei etninę  neapykantą ar užgaulios kitais požiūriais. Spustelėjus šį langelį išreiškiu sutikimą laikytis šio susitarimo ir suprantu, kad jei jo nesilaikysiu, mano narystė tinklalapyje My Europeana bus nutraukta.
-MyCodeOfConductRequired_t=Privalote sutikti su registravimosi My Europeana tvarka
+MyCodeOfConduct_t=Suprantu, kad My Personal Page man suteikia galimybę susikurti žymes bet kuriam mano norimam objektui. Sutinku, kad nekursiu tokių žymių, kurios būtų šmeižikiškos, žalingos, grasinančios, neteisėtos,įžeidžiančios, pažeidžiančios įstatymus, užgaulios, kurstančios, pornografinės, nepadorios, apgaulingos, grobikiškos privačiųjų ar viešųjų teisių požiūriu,  skleidžiančios rasinę bei etninę  neapykantą ar užgaulios kitais požiūriais. Spustelėjus šį langelį išreiškiu sutikimą laikytis šio susitarimo ir suprantu, kad jei jo nesilaikysiu, mano narystė tinklalapyje My Personal Page bus nutraukta.
+MyCodeOfConductRequired_t=Privalote sutikti su registravimosi My Personal Page tvarka
 IAgree_t=Sutinku
 Contributor_t=Bendradarbiaujanti organizacija
 Contributors_t=Bendradarbiaujančios organizacijos
@@ -38,11 +38,11 @@ SavedSearches_t=Išsaugotos užklausos
 SavedTags_t=Išsaugoti žymenys
 LogIn_t=Prisijunkite
 LogOut_t=Atsijunkite
-MyEuropeana_t=Mano Europeana
+PersonalPage=Mano Europeana
 FeedbackResponse_t=Labai ačiū už jūsų atsiliepimus. Jei pageidautumėte atsakymo, su  jumis nedelsiant susisieks Europeana komandos narys. Norint atsakymą gauti kuo greičiau, atsiliepimai turėtų būti pateikiami anglų kalba.
 EnewsOptin_t=Informuokite mane apie Europeana naujoves.
 UserConduct_t=vartotojo elgesio tvarka
-UserConductAgree_t=Suprantu, kad My Europeana man suteikia galimybę susikurti žymes bet kuriam mano norimam objektui. Sutinku, kad nekursiu tokių žymių, kurios būtų šmeižikiškos, žalingos, grasinančios, neteisėtos,įžeidžiančios, pažeidžiančios įstatymus, užgaulios, kurstančios, pornografinės, nepadorios, apgaulingos, grobikiškos privačiųjų ar viešųjų teisių požiūriu,  skleidžiančios rasinę bei etninę  neapykantą ar užgaulios kitais požiūriais. Spustelėjus šį langelį išreiškiu sutikimą laikytis šio susitarimo ir suprantu, kad jei jo nesilaikysiu, mano narystė tinklalapyje My Europeana bus nutraukta. SPUSTELĖKITE NORĖDAMI PATVIRTINTI SUTIKIMĄ
+UserConductAgree_t=Suprantu, kad My Personal Page man suteikia galimybę susikurti žymes bet kuriam mano norimam objektui. Sutinku, kad nekursiu tokių žymių, kurios būtų šmeižikiškos, žalingos, grasinančios, neteisėtos,įžeidžiančios, pažeidžiančios įstatymus, užgaulios, kurstančios, pornografinės, nepadorios, apgaulingos, grobikiškos privačiųjų ar viešųjų teisių požiūriu,  skleidžiančios rasinę bei etninę  neapykantą ar užgaulios kitais požiūriais. Spustelėjus šį langelį išreiškiu sutikimą laikytis šio susitarimo ir suprantu, kad jei jo nesilaikysiu, mano narystė tinklalapyje My Personal Page bus nutraukta. SPUSTELĖKITE NORĖDAMI PATVIRTINTI SUTIKIMĄ
 FirstName_t=Vardas
 lastName_t=Pavardė
 NoScript_t=Norint naudotis šiuo tinklalapiu, būtina turėti aktyvuotą JavaScript
@@ -129,7 +129,7 @@ EmailAddress_t=Elektroninio pašto adresas
 EmailSent_t=Elektroninio pašto laiškas išsiųstas
 EmailSendFailed_t=Elektroninio pašto laiškas neišsiųstas
 Send_t=Siųsti
-SaveToMyEuropeana_t=Išsaugoti į ManoEuropeana
+SaveToPersonalPage=Išsaugoti į ManoEuropeana
 ItemSaved_t=Išsaugota
 ItemSaveFailed_t=Išsaugoti nepavyko
 Error_t=Klaida
