--- a/portal/src/main/message_keys/messages_lv.properties
+++ b/portal/src/main/message_keys/messages_lv.properties
@@ -43,7 +43,7 @@ SavedSearches_t=Saglabātie meklējumi
 SavedTags_t=Saglabātie tagi
 LogIn_t=Pieslēgties
 LogOut_t=Iziet
-MyEuropeana_t=Mana Europeana
+PersonalPage=Mana Europeana
 FeedbackResponse_t=Pateicamies par jūsu atgriezenisko saiti. Ja nepieciešama atbilde, ar jums, cik ātri vien iespējams, sazināsies Europeana komanda. Lai saņemtu ātrāku atbildi, saziņai iesakām lietot angļu valodu.
 EnewsOptin_t=Vēlos būt lietas kursā par Europeana jaunumiem.
 UserConduct_t=Lietotāju uzvedība
@@ -134,7 +134,7 @@ EmailAddress_t=E-pasta adrese
 EmailSent_t=E-pasts nosūtīts
 EmailSendFailed_t=E-pasta nosūtīšana neizdevās
 Send_t=Nosūtīt
-SaveToMyEuropeana_t=Saglabāt Mana Europeana
+SaveToPersonalPage=Saglabāt Mana Europeana
 ItemSaved_t=Objekts saglabāts
 ItemSaveFailed_t=Objektu saglabāt neizdevās
 Error_t=Kļūda
