--- a/portal/src/main/message_keys/messages_no.properties
+++ b/portal/src/main/message_keys/messages_no.properties
@@ -43,7 +43,7 @@ SavedSearches_t=Lagrede søk
 SavedTags_t=Lagrede tags
 LogIn_t=Logg inn
 LogOut_t=Logg ut
-MyEuropeana_t=Mitt Europeana
+PersonalPage=Mitt Europeana
 FeedbackResponse_t=Mange takk for din tilbakemelding. Dersom din melding innebærer at et medlem av Europeana-teamet, vil et svar komme så snart det er praktisk mulig.. Et raskt svar vil fordre at spørsmaålet stilles på engelsk.
 EnewsOptin_t=Oppdater meg på ny utvikling av Europeana
 UserConduct_t=Brukeroppførsel
@@ -134,7 +134,7 @@ EmailAddress_t=Emailadresse
 EmailSent_t=Email sendt
 EmailSendFailed_t=Email kunne ikke sendes
 Send_t=Send
-SaveToMyEuropeana_t=Lagre i Mitt Europeana
+SaveToPersonalPage=Lagre i Mitt Europeana
 ItemSaved_t=Objekt lagret
 ItemSaveFailed_t=Lagring av objekt feilet
 Error_t=Feil
