--- a/portal/src/main/message_keys/messages_pl.properties
+++ b/portal/src/main/message_keys/messages_pl.properties
@@ -44,7 +44,7 @@ SavedSearches_t=Zachowane wyszukiwania
 SavedTags_t=Zachowane tagi
 LogIn_t=Logowanie
 LogOut_t=Wylogowanie
-MyEuropeana_t=Moja Europeana
+PersonalPage=Moja Europeana
 FeedbackResponse_t=Dziękujemy za kontakt. Jeżeli jest to pytanie wymagające odpowiedzi od zespołu Europeany, dostaniesz ją w najbliższym możliwym terminie. Kontakt w języku angielskim przyspiesza otrzymanie odpowiedzi.
 EnewsOptin_t=Chcę być informowany o nowościach Europeany
 UserConduct_t=Regulamin użytkownika
@@ -135,7 +135,7 @@ EmailAddress_t=Adres email
 EmailSent_t=Email wysłany
 EmailSendFailed_t=Email nie został wysłany
 Send_t=Wyślij
-SaveToMyEuropeana_t=Zachowaj w Moja Europeana
+SaveToPersonalPage=Zachowaj w Moja Europeana
 ItemSaved_t=Dokument zachowany
 ItemSaveFailed_t=Zachowanie dokumentu nie pwoiodło się
 Error_t=Błąd
