--- a/portal/src/main/message_keys/messages_pt.properties
+++ b/portal/src/main/message_keys/messages_pt.properties
@@ -38,7 +38,7 @@ SavedSearches_t=Pesquisas guardadas
 SavedTags_t=Etiquetas guardadas
 LogIn_t=Entrar
 LogOut_t=Sair
-MyEuropeana_t=Minha Europeana
+PersonalPage=Minha Europeana
 FeedbackResponse_t=Muito obrigado pelos seus comentários. Se uma resposta for necessária, um membro da equipa da Europeana contactá-lo-á logo que possível. Para obter uma resposta mais rápida, submeta os seus comentários em inglês.
 EnewsOptin_t=Mantenham-me informado dos novos desenvolvimentos da Europeana
 UserConduct_t=Conduta do utilizador
@@ -129,7 +129,7 @@ EmailAddress_t=Endereço de email
 EmailSent_t=Email enviado
 EmailSendFailed_t=O email não pôde ser enviado
 Send_t=Enviado
-SaveToMyEuropeana_t=Guardar em Minha Europeana
+SaveToPersonalPage=Guardar em Minha Europeana
 ItemSaved_t=Item guardado
 ItemSaveFailed_t=O item não pôde ser guardado
 Error_t=Erro
