--- a/portal/src/main/message_keys/messages_ro.properties
+++ b/portal/src/main/message_keys/messages_ro.properties
@@ -19,8 +19,8 @@
 # permissions and limitations under the Licence.
 #
 
-MyCodeOfConduct_t=Înţeleg că My Europeana îmi oferă posibilitatea de a crea descriptori pentru oricare resursă. Sunt de acord să nu creez descriptori care pot fi consideraţi defăimători, vătămători, ameninţători, ilegali, abuzivi, inflamatori, deranjanţi, pornografici, obsceni, frauduloşi, care încalcă intimitatea sau drepturile de publicitate, odioşi sau care pot provoca obiecţii de natură rasială, etnică sau de altă natură. Bifând această casetă, consimt să respect această înţelegere, şi înţeleg că dacă o încalc, calitatea mea de membru al My Europeana va fi anulată.
-MyCodeOfConductRequired_t=Pentru a vă înregistra în My Europeana trebuie să acceptați codul nostru de conduită
+MyCodeOfConduct_t=Înţeleg că My Personal Page îmi oferă posibilitatea de a crea descriptori pentru oricare resursă. Sunt de acord să nu creez descriptori care pot fi consideraţi defăimători, vătămători, ameninţători, ilegali, abuzivi, inflamatori, deranjanţi, pornografici, obsceni, frauduloşi, care încalcă intimitatea sau drepturile de publicitate, odioşi sau care pot provoca obiecţii de natură rasială, etnică sau de altă natură. Bifând această casetă, consimt să respect această înţelegere, şi înţeleg că dacă o încalc, calitatea mea de membru al My Personal Page va fi anulată.
+MyCodeOfConductRequired_t=Pentru a vă înregistra în My Personal Page trebuie să acceptați codul nostru de conduită
 IAgree_t=Consimt
 Contributor_t=Contributor
 Contributors_t=Contributori
@@ -38,11 +38,11 @@ SavedSearches_t=Interogări salvate
 SavedTags_t=Descriptori salvaţi
 LogIn_t=Login
 LogOut_t=Logout
-MyEuropeana_t=My Europeana
+PersonalPage=My Personal Page
 FeedbackResponse_t=Vă mulțumim foarte mult pentru feedback-ul dvs. Dacă el implică un răspuns, un membru al echipei Europeana vă va contacta cât de curând. Pentru un răspuns mai rapid, feedback-ul ar trebui să fie în engleză.
 EnewsOptin_t=Țineți-mă la curent cu evoluțiile Europeana
 UserConduct_t=Conduita utilizatorului
-UserConductAgree_t=Înțeleg că My Europeana îmi oferă oportunitatea de a crea descriptori (taguri) care pot fi consideraţi defăimători, vătămători, ameninţători, ilegali, abuzivi, inflamatori, deranjanţi, pornografici, obsceni, frauduloşi, care încalcă intimitatea sau drepturile de publicitate, odioşi sau care pot provoca obiecţii de natură rasială, etnică sau de altă natură. Bifând această casetă, consimt să respect această înţelegere, şi înţeleg că dacă o încalc, calitatea mea de membru al My Europeana va fi anulată. CLICK PENTRU CONSIMȚĂMÂNT
+UserConductAgree_t=Înțeleg că My Personal Page îmi oferă oportunitatea de a crea descriptori (taguri) care pot fi consideraţi defăimători, vătămători, ameninţători, ilegali, abuzivi, inflamatori, deranjanţi, pornografici, obsceni, frauduloşi, care încalcă intimitatea sau drepturile de publicitate, odioşi sau care pot provoca obiecţii de natură rasială, etnică sau de altă natură. Bifând această casetă, consimt să respect această înţelegere, şi înţeleg că dacă o încalc, calitatea mea de membru al My Personal Page va fi anulată. CLICK PENTRU CONSIMȚĂMÂNT
 FirstName_t=Prenume
 lastName_t=Nume de familie
 NoScript_t=Pentru o utilizare optimală a acestui sait, e necesar să aveți JavaScript activat.
@@ -129,7 +129,7 @@ EmailAddress_t=Adresa de meil
 EmailSent_t=Meil expediat
 EmailSendFailed_t=Meilul n-a putut fi expediat
 Send_t=Trimite
-SaveToMyEuropeana_t=Salvează în My Europeana
+SaveToPersonalPage=Salvează în My Personal Page
 ItemSaved_t=Resursă salvată
 ItemSaveFailed_t=Salvarea resursei a eşuat
 Error_t=Eroare
@@ -157,7 +157,7 @@ NoSavedSearches_t=Nu s-au salvat interogări
 NoSavedTags_t=Nu s-au salvat descriptori
 DateSaved_t=Dată salvată
 Remove_t=Elimină
-EmailWelcome_t=Bine ați venit pe My Europeana
+EmailWelcome_t=Bine ați venit pe My Personal Page
 EmailClickToConfirm_t=Vă rug să clickaţi pe acest link pentru a vă confirma înregistrarea
 EmailEuropeanaTeam_t=Echipa Europeana
 Results_t=rezultate
