--- a/portal/src/main/message_keys/messages_sk.properties
+++ b/portal/src/main/message_keys/messages_sk.properties
@@ -38,7 +38,7 @@ SavedSearches_t=Uložené vyhľadávania
 SavedTags_t=Uložené tagy
 LogIn_t=Prihlásenie
 LogOut_t=Odhlásenie
-MyEuropeana_t=Moja Europeana
+PersonalPage=Moja Europeana
 FeedbackResponse_t=Ďakujeme Vám za Vašu spätnú väzbu. Ak Vaša spätná väzba vyžaduje odpoveď, člen tímu Europeana sa Vám ozve hneď, ako to bude možné. Na urýchlenie odpovede by mala byť Vaša spätná väzba v anglickom jazyku.
 EnewsOptin_t=Informujte ma o najnovšom vývoji súvisiacim s Europeanou
 UserConduct_t=Pravidlá správania sa používateľov
@@ -129,7 +129,7 @@ EmailAddress_t=E-mailová adresa:
 EmailSent_t=Správa odoslaná
 EmailSendFailed_t=Správu sa nepodarilo odoslať
 Send_t=Poslať
-SaveToMyEuropeana_t=Uložiť do Moja Europeana
+SaveToPersonalPage=Uložiť do Moja Europeana
 ItemSaved_t=Položka bola uložená
 ItemSaveFailed_t=Uloženie položky bolo neúspešné
 Error_t=Chyba
