--- a/portal/src/main/message_keys/messages_sl.properties
+++ b/portal/src/main/message_keys/messages_sl.properties
@@ -43,7 +43,7 @@ SavedSearches_t=Shranjena iskanja
 SavedTags_t=Shranjeni zaznamki
 LogIn_t=Prijava
 LogOut_t=Odjava
-MyEuropeana_t=Moja Europeana
+PersonalPage=Moja Europeana
 FeedbackResponse_t=Thank you very much for your feedback. If your feedback requires a response a member of the Europeana team will get back to you as soon as possible. For faster response feedback should be submitted in English.
 EnewsOptin_t=Obveščajte me o novostih na Europeani.
 UserConduct_t=Pravila ravnanja
@@ -134,7 +134,7 @@ EmailAddress_t=Elektronski naslov
 EmailSent_t=Sporočilo poslano
 EmailSendFailed_t=Sporočila ni bilo mogoče poslati
 Send_t=Pošlji
-SaveToMyEuropeana_t=Shrani v Mojo Europeano
+SaveToPersonalPage=Shrani v Mojo Europeano
 ItemSaved_t=Predmet shranjen
 ItemSaveFailed_t=Shranjevanje predmeta ni uspelo
 Error_t=Napaka
