--- a/portal/src/main/message_keys/messages_xx.properties
+++ b/portal/src/main/message_keys/messages_xx.properties
@@ -39,7 +39,7 @@ SavedSearches_t=XXXXXX
 SavedTags_t=XXXXXX
 LogIn_t=XXXXXX
 LogOut_t=XXXXXX
-MyEuropeana_t=XXXXXX
+PersonalPage=XXXXXX
 FeedbackResponse_t=Thank you very much for your feedback. If your feedback requires a response a member of the Europeana team will get back to you as soon as possible. For faster response feedback should be submitted in English.
 EnewsOptin_t=XXXXXX
 UserConduct_t=XXXXXX
@@ -129,7 +129,7 @@ EmailAddress_t=XXXXXX
 EmailSent_t=XXXXXX
 EmailSendFailed_t=XXXXXX
 Send_t=XXXXXX
-SaveToMyEuropeana_t=XXXXXX
+SaveToPersonalPage=XXXXXX
 ItemSaved_t=XXXXXX
 ItemSaveFailed_t=XXXXXX
 Error_t=XXXXXX
