--- a/portal/src/main/message_keys/messages_el.properties
+++ b/portal/src/main/message_keys/messages_el.properties
@@ -38,7 +38,7 @@ SavedSearches_t=Αποθηκευμένες έρευνες
 SavedTags_t=Αποθηκευμένες ετικέτες
 LogIn_t=Σύνδεση
 LogOut_t=Αποσύνδεση
-MyEuropeana_t=Η Europeana μου
+PersonalPage=Η Europeana μου
 FeedbackResponse_t=Σας ευχαριστούμε για την ανάδραση. Αν η ανάδρασή σας απαιτεί απάντηση, ένα μέλος της ομάδας της Europeana θα επικοινωνήσει μαζί σας το συντομότερο δυνατό. Για ταχύτερη ανταπόκριση, η ανάδραση πρέπει να υποβάλλεται στα Αγγλικά.
 EnewsOptin_t=Κρατήστε με ενήμερο/η για τις νέες εξελίξεις της Europeana
 UserConduct_t=Συμπεριφορά χρήστη
@@ -129,7 +129,7 @@ EmailAddress_t=Διεύθυνση ηλ-ταχυδρομείου
 EmailSent_t=Το ηλ-ταχυδρομείο απεστάλη
 EmailSendFailed_t=Το ηλ-ταχυδρομείο δεν μπορούσε να αποσταλεί
 Send_t=Αποστολή
-SaveToMyEuropeana_t=Αποθήκευση στη Europeana μου
+SaveToPersonalPage=Αποθήκευση στη Europeana μου
 ItemSaved_t=Το τεκμήριο αποθηκεύτηκε
 ItemSaveFailed_t=Αποτυχία αποθήκευσης τεκμηρίου
 Error_t=Σφάλμα
