--- a/portal/src/main/message_keys/messages_nl.properties
+++ b/portal/src/main/message_keys/messages_nl.properties
@@ -20,7 +20,7 @@
 #
 
 MyCodeOfConduct_t=Ik begrijp dat Mijn Europeana mij de mogelijkheid biedt tags te creëren voor ieder gewenst item. Ik ga ermee akkoord dat ik geen tags zal creëren die beschouwd zouden kunnen worden als lasterlijk, schadelijk, bedreigend, onwettig, smadend, schendend, beledigend, opruiend, treiterend, pornografisch, onzedelijk, frauduleus, de privacy- of publiciteitsrechten schendend, kwaadaardig, of racistisch of vanuit een etnisch of ander oogpunt aanstootgevend. Door het aanklikken van deze knop verklaar ik dat ik mij zal houden aan deze overeenkomst en ik begrijp dat als ik dat niet doe, mijn lidmaatschap van Mijn Europeana zal worden beëindigd.
-MyCodeOfConductRequired_t=U dient in te stemmen met onze gedragscode om u te laten registreren voor My Europeana
+MyCodeOfConductRequired_t=U dient in te stemmen met onze gedragscode om u te laten registreren voor My Personal Page
 IAgree_t=Ik ga akkoord
 Contributor_t=Bijdragende organisatie
 Contributors_t=Bijdragende organisaties
@@ -38,7 +38,7 @@ SavedSearches_t=Bewaarde zoekopdrachten
 SavedTags_t=Bewaarde tags
 LogIn_t=Inloggen
 LogOut_t=Uitloggen
-MyEuropeana_t=Mijn Europeana
+PersonalPage=Mijn Europeana
 FeedbackResponse_t=Hartelijk dank voor uw feedback. Als uw feedback antwoord behoeft, neemt een lid van het Europeana-team zo snel mogelijk contact met u op. Voor een snellere reactie dient feedback in het Engels te worden aangeboden.
 EnewsOptin_t=Houd mij op de hoogte van nieuwe ontwikkelingen binnen Europeana
 UserConduct_t=Gebruikersgedrag
@@ -131,7 +131,7 @@ EmailAddress_t=Email adres
 EmailSent_t=Email verzonden
 EmailSendFailed_t=Email kan niet worden verzonden
 Send_t=Verstuur
-SaveToMyEuropeana_t=Bewaar in Mijn Europeana
+SaveToPersonalPage=Bewaar in Mijn Europeana
 ItemSaved_t=Items opgeslagen
 ItemSaveFailed_t=Opslaan item mislukt
 Error_t=Fout
