--- a/portal/src/main/message_keys/messages_sv.properties
+++ b/portal/src/main/message_keys/messages_sv.properties
@@ -19,14 +19,14 @@
 # permissions and limitations under the Licence.
 #
 
-MyCodeOfConduct_t=Jag är medveten om att jag kan lägga till märkningar för vilket objekt som helst på My Europeana. Jag lovar\
+MyCodeOfConduct_t=Jag är medveten om att jag kan lägga till märkningar för vilket objekt som helst på My Personal Page. Jag lovar\
             att inte att skapa några märkningar som skulle kunna uppfattas som ärekränkande, hotfulla, lagstridiga,\
 		    nedsättande, rättighetskränkande, provocerande, pornografiska, obscena, falska, hatiska eller stötande med\
             avseende på etnicitet och ursprung, eller som skulle kunna vara till skada för någon eller tolkas som\
             smutskastning, trakasseri, kränkning av publiceringsrätt eller privatlivets helgd. Genom att klicka i den\
             här rutan lovar jag att följa reglerna i det här avtalet, och jag är medveten om att medlemskapet i My\
             Europeana annars avslutas.
-MyCodeOfConductRequired_t=Du måste acceptera våra regler för uppförande innan du kan registrera dig på My Europeana
+MyCodeOfConductRequired_t=Du måste acceptera våra regler för uppförande innan du kan registrera dig på My Personal Page
 IAgree_t=Jag accepterar
 Contributor_t=Medverkande
 Contributors_t=Medverkande
@@ -44,11 +44,11 @@ SavedSearches_t=Sparade sökningar
 SavedTags_t=Sparade märkningar
 LogIn_t=Logga in
 LogOut_t=Logga ut
-MyEuropeana_t=Mitt Europeana
+PersonalPage=Mitt Europeana
 FeedbackResponse_t=Tack för din feedback. Om ett svar krävs kommer en person i Europeana-teamet att kontakta dig så snart som möjligt. Det går snabbare att få svar om din feedback skrivs på engelska.
 EnewsOptin_t=Håll mig underrättad om ny utveckling inom Europeana
 UserConduct_t=Användarregler
-UserConductAgree_t=Jag är medveten om att jag kan lägga till märkningar för vilket objekt som helst på My Europeana. Jag lovar att inte att skapa några märkningar som skulle kunna uppfattas som ärekränkande, hotfulla, lagstridiga, nedsättande, rättighetskränkande, provocerande, pornografiska, obscena, falska, hatiska eller stötande med avseende på etnicitet och ursprung, eller som skulle kunna vara till skada för någon eller tolkas som smutskastning, trakasseri, kränkning av publiceringsrätt eller privatlivets helgd. Genom att klicka i den här rutan lovar jag att följa reglerna i det här avtalet, och jag är medveten om att medlemskapet i My Europeana annars avslutas. KLICKA FÖR ATT ACCEPTERA
+UserConductAgree_t=Jag är medveten om att jag kan lägga till märkningar för vilket objekt som helst på My Personal Page. Jag lovar att inte att skapa några märkningar som skulle kunna uppfattas som ärekränkande, hotfulla, lagstridiga, nedsättande, rättighetskränkande, provocerande, pornografiska, obscena, falska, hatiska eller stötande med avseende på etnicitet och ursprung, eller som skulle kunna vara till skada för någon eller tolkas som smutskastning, trakasseri, kränkning av publiceringsrätt eller privatlivets helgd. Genom att klicka i den här rutan lovar jag att följa reglerna i det här avtalet, och jag är medveten om att medlemskapet i My Personal Page annars avslutas. KLICKA FÖR ATT ACCEPTERA
 FirstName_t=Förnamn
 lastName_t=Efternamn
 NoScript_t=Om du vill kunna använda den här webbplatsen fullt ut måste JavaScript vara aktiverat
@@ -135,7 +135,7 @@ EmailAddress_t=E-postadress
 EmailSent_t=E-post har skickats
 EmailSendFailed_t=Det gick inte att skicka e-post
 Send_t=Skicka
-SaveToMyEuropeana_t=Spara på Mitt Europeana
+SaveToPersonalPage=Spara på Mitt Europeana
 ItemSaved_t=Objektet har sparats
 ItemSaveFailed_t=Det gick inte att spara objektet
 Error_t=Fel
