--- a/portal/src/main/message_keys/messages_nl.properties
+++ b/portal/src/main/message_keys/messages_nl.properties
@@ -19,7 +19,7 @@
 # permissions and limitations under the Licence.
 #
 
-MyCodeOfConduct_t=Ik begrijp dat Mijn Europeana mij de mogelijkheid biedt tags te creëren voor ieder gewenst item. Ik ga ermee akkoord dat ik geen tags zal creëren die beschouwd zouden kunnen worden als lasterlijk, schadelijk, bedreigend, onwettig, smadend, schendend, beledigend, opruiend, treiterend, pornografisch, onzedelijk, frauduleus, de privacy- of publiciteitsrechten schendend, kwaadaardig, of racistisch of vanuit een etnisch of ander oogpunt aanstootgevend. Door het aanklikken van deze knop verklaar ik dat ik mij zal houden aan deze overeenkomst en ik begrijp dat als ik dat niet doe, mijn lidmaatschap van Mijn Europeana zal worden beëindigd.
+MyCodeOfConduct_t=Ik begrijp dat registreren mij de mogelijkheid biedt tags te creëren voor ieder gewenst item. Ik ga ermee akkoord dat ik geen tags zal creëren die beschouwd zouden kunnen worden als lasterlijk, schadelijk, bedreigend, onwettig, smadend, schendend, beledigend, opruiend, treiterend, pornografisch, onzedelijk, frauduleus, de privacy- of publiciteitsrechten schendend, kwaadaardig, of racistisch of vanuit een etnisch of ander oogpunt aanstootgevend. Door het aanklikken van deze knop verklaar ik dat ik mij zal houden aan deze overeenkomst en ik begrijp dat als ik dat niet doe, mijn registratie zal worden beëindigd.
 MyCodeOfConductRequired_t=U dient in te stemmen met onze gedragscode om u te laten registreren voor My Europeana
 IAgree_t=Ik ga akkoord
 Contributor_t=Bijdragende organisatie
@@ -39,10 +39,10 @@ SavedTags_t=Bewaarde tags
 LogIn_t=Inloggen
 LogOut_t=Uitloggen
 MyEuropeana_t=Mijn Europeana
-FeedbackResponse_t=Hartelijk dank voor uw feedback. Als uw feedback antwoord behoeft, neemt een lid van het Europeana-team zo snel mogelijk contact met u op. Voor een snellere reactie dient feedback in het Engels te worden aangeboden.
-EnewsOptin_t=Houd mij op de hoogte van nieuwe ontwikkelingen binnen Europeana
+FeedbackResponse_t=Hartelijk dank voor uw feedback. Als uw feedback antwoord behoeft, neemt een lid van ons team zo snel mogelijk contact met u op.
+EnewsOptin_t=Houd mij op de hoogte van nieuwe ontwikkelingen binnen ICN
 UserConduct_t=Gebruikersgedrag
-UserConductAgree_t=Ik begrijp dat Mijn Europeana mij de mogelijkheid biedt tags te creëren voor ieder gewenst item. Ik ga ermee akkoord dat ik geen tags zal creëren die beschouwd zouden kunnen worden als lasterlijk, schadelijk, bedreigend, onwettig, smadend, schendend, beledigend, opruiend, treiterend, pornografisch, onzedelijk, frauduleus, de privacy- of publiciteitsrechten schendend, kwaadaardig, of racistisch of vanuit een etnisch of ander oogpunt aanstootgevend. Door het aanklikken van deze knop verklaar ik dat ik mij zal houden aan deze overeenkomst en ik begrijp dat als ik dat niet doe, mijn lidmaatschap van Mijn Europeana zal worden beëindigd. AANKLIKKEN OM AKKOORD TE GAAN
+UserConductAgree_t=Ik begrijp dat registreren mij de mogelijkheid biedt tags te creëren voor ieder gewenst item. Ik ga ermee akkoord dat ik geen tags zal creëren die beschouwd zouden kunnen worden als lasterlijk, schadelijk, bedreigend, onwettig, smadend, schendend, beledigend, opruiend, treiterend, pornografisch, onzedelijk, frauduleus, de privacy- of publiciteitsrechten schendend, kwaadaardig, of racistisch of vanuit een etnisch of ander oogpunt aanstootgevend. Door het aanklikken van deze knop verklaar ik dat ik mij zal houden aan deze overeenkomst en ik begrijp dat als ik dat niet doe, mijn lidmaatschap zal worden beëindigd. AANKLIKKEN OM AKKOORD TE GAAN
 FirstName_t=Voornaam
 lastName_t=Achternaam
 NoScript_t=Om optimaal gebruik te kunnen maken van deze website, dient JavaScript op uw computer geactiveerd te zijn.
